--- a/apps/forum_app/templates/forum_app/thread.html
+++ b/apps/forum_app/templates/forum_app/thread.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href="{% static 'forum_app/css/style.css' %}">
+	<link rel="icon" href="{% static 'forum_app/img/favicon.ico' %}">
 </head>
 <body>
 
@@ -63,6 +64,15 @@
 				</span><br>
 				<input type="submit" value="submit" class="button">
 			</form>
+			<div class="errors">
+				{% if messages %}
+				<ul>
+					{% for message in messages %}
+					<li class="{{ message.tags }}">{{ message }}</li>
+					{% endfor %}
+				</ul>
+				{% endif %}
+			</div>
 		</div>
 	</div>
 
