--- a/apps/forum_app/static/forum_app/css/style.css
+++ b/apps/forum_app/static/forum_app/css/style.css
@@ -97,6 +97,9 @@ pre {
     color: #920000;
     font-weight: 900;
 }
+/*.quote {
+    color: #789922;
+}*/
 .clearfix::after {
     content: "";
     clear: both;
