--- a/apps/forum_app/templates/forum_app/thread.html
+++ b/apps/forum_app/templates/forum_app/thread.html
@@ -15,7 +15,7 @@
     <p><a href="/">Back</a></p>
 
     <div class="left">
-        <div class="thread left">
+        <div class="thread left" id="{{post.id}}">
             <p class="file_name">
                 File: 
                 <a href="{{MEDIA_URL}}{{post.image}}">{{post.file_name}}</a>
@@ -36,7 +36,7 @@
         <div class="replies">
             {% for reply in post.replies.all %}
                 <span class="arrows left">>></span>
-                <div class="post">
+                <div class="post" id="{{reply.id}}">
                     <p class="block"><span class="name"><a {% if reply.email %} href="mailto:{{reply.email}}" {% endif %}>{{reply.name}}</a></span> {{reply.created_at}} No. {{reply.id}}</p>
                     {% if reply.image %}
                         <p class="file_name">
@@ -64,15 +64,13 @@
                 </span><br>
                 <input type="submit" value="submit" class="button">
             </form>
-            <div class="errors">
-                {% if messages %}
-                <ul>
-                    {% for message in messages %}
-                    <li class="{{ message.tags }}">{{ message }}</li>
-                    {% endfor %}
-                </ul>
-                {% endif %}
-            </div>
+            {% if messages %}
+            <ul class="errors">
+                {% for message in messages %}
+                <li class="{{ message.tags }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
         </div>
     </div>
 
